--- a/src/components/column.module.css
+++ b/src/components/column.module.css
@@ -1,7 +1,6 @@
 .col{
-    min-height: 25rem;
+    min-height: 40rem;
     max-height: 30rem;
-    overflow-y: auto;
     width: 20%;
     background-color: #7077A1;
     margin: .5rem;
@@ -11,6 +10,10 @@
     display: flex;
     flex-direction: column;
     border: 2px dashed transparent;
+  }
+
+  .col .body{
+    overflow-y: auto;
   }
 
   .header{
